--- a/openfoam_cbp/package.json
+++ b/openfoam_cbp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openfoam_cbp",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "",
   "bin": "server/index.js",
   "main": "index.js",
@@ -38,6 +38,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "morgan": "^1.10.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-complex-tree": "^1.1.4",
