--- a/openfoam_cbp/.eslintrc.json
+++ b/openfoam_cbp/.eslintrc.json
@@ -2,12 +2,14 @@
   "env": {
     "node": true,
     "browser": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "next/core-web-vitals"
+    "next/core-web-vitals",
+    "next/babel"
   ],
   "parserOptions": {
     "ecmaFeatures": {
