--- a/openfoam_cbp/package.json
+++ b/openfoam_cbp/package.json
@@ -16,21 +16,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "analyze": "ANALYZE=true next build",
     "analyze:server": "BUNDLE_ANALYZE=server next build",
     "analyze:browser": "BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
-    "@mui/lab": "^5.0.0-alpha.83",
-    "@next/bundle-analyzer": "^12.1.6",
-    "eventsource": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@mdx-js/loader": "^2.1.1",
     "@monaco-editor/react": "^4.4.5",
     "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.8.1",
+    "@next/bundle-analyzer": "^12.1.6",
     "@next/mdx": "^12.1.6",
     "@types/node": "^17.0.35",
     "@types/react": "^17.0.45",
@@ -40,6 +40,7 @@
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.0",
+    "eventsource": "^2.0.2",
     "iron-session": "^6.1.3",
     "monaco-editor": "^0.33.0",
     "morgan": "^1.10.0",
@@ -51,5 +52,13 @@
     "react-dom": "^17.0.2",
     "react-reflex": "^4.0.9",
     "typescript": "^4.7.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "babel-jest": "^28.1.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "mq-polyfill": "^1.1.8"
   }
 }
