passes and builds

--- a/openfoam_cbp/.eslintrc.json
+++ b/openfoam_cbp/.eslintrc.json
@@ -8,8 +8,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "next/core-web-vitals",
-    "next/babel"
+    "next/core-web-vitals"
   ],
   "parserOptions": {
     "ecmaFeatures": {
