--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,6 @@ buildings.obj
 buildings.obj.gz
 *.sif
 .next/
-cypress/downloads
-cypress/screenshots
-cypress/videos
+cypress/downloads/
+cypress/screenshots/
+cypress/videos/
