--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,8 +14,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Build
-        run: docker build . -f test.Dockerfile -t "test/test:test"
+      - name: Build Deps Docker
+        run: docker build . --target builder -t test/test:latest
 
       - name: Unit Tests
-        run: docker run test/test:test
+        run: docker run test/test:latest
+
+      - name: Build Docker
+        run: docker build . -t test/runner:latest
+
+      - name: Run Docker
+        run: docker run -d -p 3000:3000 test/runner:latest
+
+      - name: Pull Cypress Docker
+        run: docker pull cypress/included:10.0.0
+
+      - name: E2E Tests chrome
+        run: docker run --network host -v "$(pwd)"/openfoam_cbp:/tests -w /tests cypress/included:10.0.0 --browser chrome
+
+      - name: E2E Tests firefox
+        run: docker run --network host -v "$(pwd)"/openfoam_cbp:/tests -w /tests cypress/included:10.0.0 --browser firefox
